kube/bankservice/deployment_bankservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankservice
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bankservice
    spec:
      containers:
        - image: registry.gitlab.com/spacedrag/dockerregistry/bankservice:v1
          name: bankservice
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8090
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8090
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
      imagePullSecrets:
        - name: regcred
