kube/bankservice/service_bankservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bankservice
spec:
  ports:
    - port: 80
      targetPort: 8082
  selector:
    app: bankservice
  type: ClusterIP
