kube/bankservice/ingress_bankservice.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankservice
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bankservice
                port:
                  number: 80
